2006-02-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Backport:
	2006-02-01  Steve Ellcey  <sje@cup.hp.com>

	PR middle-end/24901
	* fold-const.c (fold_checksum_tree): Change type of buf.

2006-02-13  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa/quadlib.c: Use defines instead of enum qfcmp_magic.

2006-02-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* doc/contrib.texi: Update my entry.

2006-02-08  Jason Merrill  <jason@redhat.com>

	PR c++/25979
	* tree.def: Elaborate on difference from MODIFY_EXPR.
	* doc/c-tree.texi (INIT_EXPR): Likewise.
	* gimplify.c (internal_get_tmp_var): Use INIT_EXPR.
	(gimplify_decl_expr, gimplify_init_ctor_eval): Likewise.
	(gimplify_target_expr): Likewise.
	(gimplify_cond_expr): Remove target handling.
	(gimplify_modify_expr): Don't clobber INIT_EXPR code here.
	(gimplify_expr): Clobber it here.
	(gimplify_modify_expr_rhs): Push assignment into COND_EXPR here.
	Do return slot optimization if we have an INIT_EXPR.

	PR middle-end/22439
	* gimplify.c (gimplify_one_sizepos): Fix typo.

2006-02-09  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sparc.c (tls_call_delay): Fix oversight.

2006-02-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/26109
	* pa.c (attr_length_indirect_call): Don't return length 8 for distances
	>= 240000 when generating code for SOM runtime.
	(output_indirect_call): Don't use "b,l" instruction for indirect calls
	to $$dyncall when generating code for SOM runtime..

2006-01-26  Alan Modra  <amodra@bigpond.net.au>

	PR middle-end/25176
	* function.c (expand_function_end): Emit blockage for unwinder
	after return label.

2006-01-23  Steven Bosscher  <stevenb.gcc@gmail.com>
	Jan Hubicka  <jh@suse.cz>
	Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/25654
	* cfgexpand.c (aggregate_contains_union_type): New function.
	(add_alias_set_conflicts): Call it.  Make sure to add conflicts
	for structure variables that contain a union type.
