@@ -1,3 +1,13 @@
+2006-02-16  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	PR target/26255
+	* pa.md: Create separate HI and QI move patterns for 32-bit and 64-bit
+	with hardware float support, and software float support.  Add fcpy
+	alternative to hardware patterns.  Add alternatives to copy between
+	general and floating-point registers to the 32-bit pattern.
+	* pa32-regs.h (VALID_FP_MODE_P): Allow QImode and HImode.
+	* pa64-regs.h (VALID_FP_MODE_P): Likewise.
+
 2006-02-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	Backport:
